--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="clNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="pages/topics.html">Topics</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/forum.html">Forum</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/resources.html">Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/faq.html">FAQ</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/messages.html">Messages</a></li>
-          </ul>
+          </ul> -->
           <div class="d-flex gap-2">
             <a href="pages/login.html" class="btn btn-outline-primary btn-sm">Log in</a>
             <a href="pages/register.html" class="btn btn-primary btn-sm">Register</a>
@@ -274,7 +274,7 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./env.js"></script>
+    <script src="./assets/js/env.js"></script>
     <script type="module" src="./vendor/bootstrap/js/supabaseClient.js"></script>
     <script src="assets/js/app.js"></script>
   </body>
