--- a/pages/forum.html
+++ b/pages/forum.html
@@ -9,14 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
     <link href="assets/css/styles.css" rel="stylesheet" />
-     <script src = "../nav.js"></script>
+     <script src = "../assets/js/nav.js"></script>
   </head>
 
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -165,6 +165,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../env.js"></script>
     <script type="module" src="../vendor/bootstrap/js/supabaseClient.js"></script>
-    <script type="module" src="../ForumPost.js"></script>
+    <script type="module" src="../assets/js/ForumPost.js"></script>
   </body>
 </html>
