--- a/pages/login.html
+++ b/pages/login.html
@@ -105,7 +105,7 @@
     </style>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src = "../Student.js"></script>
+    <script src = "../assets/js/Student.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
