--- a/pages/register.html
+++ b/pages/register.html
@@ -211,6 +211,6 @@
     </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="../Register.js"></script>  
+  <script src="../assets/js/Register.js"></script>  
   </body>
 </html>
