--- a/pages/resources.html
+++ b/pages/resources.html
@@ -7,21 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-
   </head>
-  <body>
 
+  <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container">
         <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="clNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="topics.html">Topics</a></li>
             <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
-            <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
+            <li class="nav-item"><a class="nav-link active" href="resources.html">Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
             <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
           </ul>
@@ -33,35 +33,97 @@
       </div>
     </nav>
 
+    <!-- Main content -->
     <main class="container my-4">
+      <h1 class="h4 mb-4">Learning Materials</h1>
 
-<h1 class="h4 mb-4">Learning Materials</h1>
-<form class="row g-3 mb-3">
-  <div class="col-md-4">
-    <label class="form-label">Search</label>
-    <input class="form-control" placeholder="e.g., normalization, UML">
-  </div>
-  <div class="col-md-4">
-    <label class="form-label">Module</label>
-    <select class="form-select">
-      <option>All</option><option>SE202</option><option>DB101</option><option>ITM300</option>
-    </select>
-  </div>
-  <div class="col-md-4">
-    <label class="form-label">Type</label>
-    <select class="form-select">
-      <option>All</option><option>Video</option><option>PDF</option><option>Interactive</option>
-    </select>
-  </div>
-</form>
-<div class="row g-3">
-  <div class="col-md-4"><div class="card h-100"><div class="card-body"><h6>Normalization 101</h6><p class="small">DB101 • PDF</p><a href="#" class="btn btn-outline-primary btn-sm">Open</a></div></div></div>
-  <div class="col-md-4"><div class="card h-100"><div class="card-body"><h6>Sequence Diagrams Explained</h6><p class="small">SE202 • Video</p><a href="#" class="btn btn-outline-primary btn-sm">Open</a></div></div></div>
-  <div class="col-md-4"><div class="card h-100"><div class="card-body"><h6>Agile Estimation Exercise</h6><p class="small">SE202 • Interactive</p><a href="#" class="btn btn-outline-primary btn-sm">Open</a></div></div></div>
-</div>
+      <!-- Search & Filters -->
+      <form class="row g-3 mb-3">
+        <div class="col-md-4">
+          <label class="form-label">Search</label>
+          <input class="form-control" placeholder="e.g., normalization, UML">
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Module</label>
+          <select class="form-select">
+            <option>All</option><option>SE202</option><option>DB101</option><option>ITM300</option>
+          </select>
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Type</label>
+          <select class="form-select">
+            <option>All</option><option>Video</option><option>PDF</option><option>Interactive</option>
+          </select>
+        </div>
+      </form>
 
+      <!-- 🔹 Upload Section -->
+      <section class="mb-5">
+        <div class="card border-0 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title mb-3">Upload New Learning Material</h5>
+            <form id="uploadForm" class="row g-3">
+              <div class="col-md-4">
+                <label class="form-label">Module Code</label>
+                <input type="text" id="moduleCode" class="form-control" placeholder="e.g., DB101" required>
+              </div>
+              <div class="col-md-4">
+                <label class="form-label">Type</label>
+                <select id="fileType" class="form-select" required>
+                  <option value="">Select Type</option>
+                  <option value="pdf">PDF</option>
+                  <option value="video">Video</option>
+                  <option value="interactive">Interactive</option>
+                </select>
+              </div>
+              <div class="col-md-4">
+                <label class="form-label">Choose File</label>
+                <input type="file" id="fileInput" class="form-control" required>
+              </div>
+              <div class="col-md-12">
+                <button type="submit" class="btn btn-primary">
+                  <i class="fa fa-upload me-2"></i>Upload File
+                </button>
+                <div id="uploadStatus" class="small mt-2 text-muted"></div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <!-- Existing Resources -->
+      <div class="row g-3">
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h6>Normalization 101</h6>
+              <p class="small">DB101 • PDF</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h6>Sequence Diagrams Explained</h6>
+              <p class="small">SE202 • Video</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h6>Agile Estimation Exercise</h6>
+              <p class="small">SE202 • Interactive</p>
+              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
+    <!-- Footer -->
     <footer class="mt-5 py-4 border-top">
       <div class="container text-center text-muted small">
         <div>© 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus</div>
@@ -69,8 +131,8 @@
       </div>
     </footer>
 
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/app.js"></script>
-
+    <script src="assets/js/resources.js"></script>
   </body>
 </html>
