--- a/pages/student-dashboard.html
+++ b/pages/student-dashboard.html
@@ -29,12 +29,12 @@
         background-color: #f5f7fa;
       }
     </style>
-     <script src = "../nav.js"></script>
+     <script src = "../assets/js/nav.js"></script>
   </head>
   <body>
   
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src = "../Dashboard.js"></script>
+  <script src = "../assets/js/Dashboard.js"></script>
   
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
