--- a/pages/resources.html
+++ b/pages/resources.html
@@ -1,76 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resources • CampusLearn™</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-    <link href="assets/css/styles.css" rel="stylesheet">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CampusLearn™ | Resources</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script defer src="assets/js/resources.js"></script>
+</head>
+<body class="bg-light">
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top shadow-sm">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="topics.html">CampusLearn™</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a href="topics.html" class="nav-link">Topics</a></li>
+          <li class="nav-item"><a href="tutor-dashboard.html" class="nav-link">Tutor Dashboard</a></li>
+          <li class="nav-item"><a href="resources.html" class="nav-link active">Resources</a></li>
+          <li class="nav-item"><a href="profile.html" class="nav-link">Profile</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  </head>
-  <body>
+  <!-- MAIN CONTENT -->
+  <main class="container my-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h2 class="fw-semibold">Learning Resources 📚</h2>
+      <input type="text" id="searchInput" class="form-control w-50" placeholder="Search resources..." />
+    </div>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
-      <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="clNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="topics.html">Topics</a></li>
-            <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
-            <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-            <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
-          </ul>
-          <div class="d-flex gap-2">
-            <a href="login.html" class="btn btn-outline-primary btn-sm">Log in</a>
-            <a href="register.html" class="btn btn-primary btn-sm">Register</a>
-          </div>
+    <!-- FILTERS -->
+    <div class="mb-4">
+      <select id="moduleFilter" class="form-select w-auto d-inline-block me-2">
+        <option value="">All Modules</option>
+        <option value="SE202">SE202</option>
+        <option value="DB101">DB101</option>
+        <option value="AI401">AI401</option>
+      </select>
+      <select id="typeFilter" class="form-select w-auto d-inline-block">
+        <option value="">All Types</option>
+        <option value="pdf">PDF</option>
+        <option value="video">Video</option>
+        <option value="link">External Link</option>
+      </select>
+    </div>
+
+    <!-- RESOURCE CARDS -->
+    <div id="resourceContainer" class="row g-3">
+      <!-- Cards dynamically generated here -->
+    </div>
+
+    <!-- Optional upload form for tutors -->
+    <div class="mt-5">
+      <h5>Upload a Resource (Tutors Only)</h5>
+      <form id="uploadForm" class="border p-3 rounded bg-white shadow-sm">
+        <div class="mb-2">
+          <label class="form-label">Title</label>
+          <input type="text" class="form-control" id="titleInput" required>
         </div>
-      </div>
-    </nav>
+        <div class="mb-2">
+          <label class="form-label">Type</label>
+          <select class="form-select" id="typeInput">
+            <option value="pdf">PDF</option>
+            <option value="video">Video</option>
+            <option value="link">External Link</option>
+          </select>
+        </div>
+        <div class="mb-2">
+          <label class="form-label">URL</label>
+          <input type="url" class="form-control" id="urlInput" required>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Upload Resource</button>
+      </form>
+    </div>
+  </main>
 
-    <main class="container my-4">
-
-<h1 class="h4 mb-4">Learning Materials</h1>
-<form class="row g-3 mb-3">
-  <div class="col-md-4">
-    <label class="form-label">Search</label>
-    <input class="form-control" placeholder="e.g., normalization, UML">
-  </div>
-  <div class="col-md-4">
-    <label class="form-label">Module</label>
-    <select class="form-select">
-      <option>All</option><option>SE202</option><option>DB101</option><option>ITM300</option>
-    </select>
-  </div>
-  <div class="col-md-4">
-    <label class="form-label">Type</label>
-    <select class="form-select">
-      <option>All</option><option>Video</option><option>PDF</option><option>Interactive</option>
-    </select>
-  </div>
-</form>
-<div class="row g-3">
-  <div class="col-md-4"><div class="card h-100"><div class="card-body"><h6>Normalization 101</h6><p class="small">DB101 • PDF</p><a href="#" class="btn btn-outline-primary btn-sm">Open</a></div></div></div>
-  <div class="col-md-4"><div class="card h-100"><div class="card-body"><h6>Sequence Diagrams Explained</h6><p class="small">SE202 • Video</p><a href="#" class="btn btn-outline-primary btn-sm">Open</a></div></div></div>
-  <div class="col-md-4"><div class="card h-100"><div class="card-body"><h6>Agile Estimation Exercise</h6><p class="small">SE202 • Interactive</p><a href="#" class="btn btn-outline-primary btn-sm">Open</a></div></div></div>
-</div>
-
-    </main>
-
-    <footer class="mt-5 py-4 border-top">
-      <div class="container text-center text-muted small">
-        <div>© 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus</div>
-        <div class="mt-2">Prototype demo. Not connected to real services.</div>
-      </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/app.js"></script>
-
-  </body>
+  <footer class="text-center py-3 bg-white border-top mt-5">
+    <small>© 2025 CampusLearn™ – Peer-Powered Learning</small>
+  </footer>
+</body>
 </html>
