--- a/pages/resources.html
+++ b/pages/resources.html
@@ -2,45 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CampusLearn™ | Resources</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- App styles -->
+  <link rel="icon" href="assets/images/Favicon.png" />
   <link rel="stylesheet" href="assets/css/styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script defer src="assets/js/resources.js"></script>
+  <meta name="color-scheme" content="light dark" />
 </head>
+
 <body class="bg-light">
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top shadow-sm">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="topics.html">CampusLearn™</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a href="topics.html" class="nav-link">Topics</a></li>
-          <li class="nav-item"><a href="tutor-dashboard.html" class="nav-link">Tutor Dashboard</a></li>
-          <li class="nav-item"><a href="resources.html" class="nav-link active">Resources</a></li>
-          <li class="nav-item"><a href="profile.html" class="nav-link">Profile</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <!-- NAV (loaded after auth to satisfy 'no nav before login') -->
+  <div id="clNavMount"></div>
 
-  <!-- MAIN CONTENT -->
-  <main class="container my-4">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-      <h2 class="fw-semibold">Learning Resources 📚</h2>
-      <input type="text" id="searchInput" class="form-control w-50" placeholder="Search resources..." />
+  <!-- PAGE ROOT (hidden until session confirmed) -->
+  <main id="pageRoot" class="container my-4 d-none">
+    <!-- Header + Search -->
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center gap-3 mb-3">
+      <h2 class="fw-semibold m-0">Learning Resources 📚</h2>
+      <input type="text" id="searchInput" class="form-control w-100 w-md-50" placeholder="Search resources..." />
     </div>
 
-    <!-- FILTERS -->
-    <div class="mb-4">
-      <select id="moduleFilter" class="form-select w-auto d-inline-block me-2">
+    <!-- Filters -->
+    <div class="d-flex flex-wrap gap-2 mb-3">
+      <select id="moduleFilter" class="form-select w-auto">
         <option value="">All Modules</option>
-        <option value="SE202">SE202</option>
-        <option value="DB101">DB101</option>
-        <option value="AI401">AI401</option>
+        <!-- Options loaded dynamically from table -->
       </select>
-      <select id="typeFilter" class="form-select w-auto d-inline-block">
+      <select id="typeFilter" class="form-select w-auto">
         <option value="">All Types</option>
         <option value="pdf">PDF</option>
         <option value="video">Video</option>
@@ -48,38 +39,75 @@
       </select>
     </div>
 
-    <!-- RESOURCE CARDS -->
-    <div id="resourceContainer" class="row g-3">
-      <!-- Cards dynamically generated here -->
+    <!-- Student hint (shown if role === 'student') -->
+    <div id="tutorHint" class="alert alert-info d-none" role="alert">
+      Want to upload? Apply to become a Tutor in your <a href="profile.html" class="alert-link">Profile</a>.
     </div>
 
-    <!-- Optional upload form for tutors -->
-    <div class="mt-5">
-      <h5>Upload a Resource (Tutors Only)</h5>
+    <!-- Resource cards -->
+    <div id="resourceContainer" class="row g-3"></div>
+
+    <!-- Pager -->
+    <div id="pager" class="d-flex justify-content-center my-3"></div>
+
+    <!-- Upload (visible only to tutor/admin) -->
+    <section class="mt-5">
+      <h5 class="mb-3">Upload a Resource (Tutors Only)</h5>
       <form id="uploadForm" class="border p-3 rounded bg-white shadow-sm">
-        <div class="mb-2">
-          <label class="form-label">Title</label>
-          <input type="text" class="form-control" id="titleInput" required>
-        </div>
-        <div class="mb-2">
-          <label class="form-label">Type</label>
-          <select class="form-select" id="typeInput">
-            <option value="pdf">PDF</option>
-            <option value="video">Video</option>
-            <option value="link">External Link</option>
-          </select>
-        <div class="mb-2">
-            <label class="form-label">Upload file (PDF/Video) or leave blank for External Link</label>
-            <input type="file" class="form-control" id="fileInput" accept=".pdf,video/*">
-            <div class="form-text">If you choose “External Link”, we’ll ignore the file and use the URL.</div>
+        <div class="row g-3">
+          <div class="col-12">
+            <label for="titleInput" class="form-label">Title</label>
+            <input type="text" class="form-control" id="titleInput" required>
           </div>
-        <button type="submit" class="btn btn-primary w-100">Upload Resource</button>
+          <div class="col-12 col-md-6">
+            <label for="typeInput" class="form-label">Type</label>
+            <select class="form-select" id="typeInput">
+              <option value="pdf">PDF</option>
+              <option value="video">Video</option>
+              <option value="link">External Link</option>
+            </select>
+          </div>
+          <div class="col-12 col-md-6">
+            <label for="fileInput" class="form-label">Upload file (PDF/Video)</label>
+            <input type="file" class="form-control" id="fileInput" accept=".pdf,video/*">
+            <div class="form-text">Leave empty if you’re adding an External Link.</div>
+          </div>
+          <div class="col-12">
+            <label for="urlInput" class="form-label">External URL</label>
+            <input type="url" class="form-control" id="urlInput" placeholder="https://example.com/my-resource">
+            <div class="form-text">Required for “External Link”. Optional for PDF/Video.</div>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary w-100">Upload Resource</button>
+          </div>
+        </div>
       </form>
-    </div>
+    </section>
   </main>
 
-  <footer class="text-center py-3 bg-white border-top mt-5">
-    <small>© 2025 CampusLearn™ – Peer-Powered Learning</small>
-  </footer>
+  <!-- Toast container -->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index:1100">
+    <div id="clToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <strong class="me-auto" id="clToastTitle">Notice</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body" id="clToastBody"></div>
+    </div>
+  </div>
+
+  <!-- JS (order matters) -->
+  <script src="assets/js/env.js"></script> <!-- real keys (ignored in git); ensure env.example.js is committed -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    // Create client early for resources.js
+    window.supabase = supabase.createClient(window.__ENV.SUPABASE_URL, window.__ENV.SUPABASE_ANON_KEY);
+  </script>
+
+  <!-- Bootstrap JS (for toasts) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Resources logic (final version you pasted earlier) -->
+  <script src="assets/js/resources.js" defer></script>
 </body>
 </html>
