--- a/pages/resources.html
+++ b/pages/resources.html
@@ -1,64 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resources • CampusLearn™</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-    <link href="assets/css/styles.css" rel="stylesheet">
-  </head>
-
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
-      <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="clNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="topics.html">Topics</a></li>
-            <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
-            <li class="nav-item"><a class="nav-link active" href="resources.html">Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-            <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
-          </ul>
-          <div class="d-flex gap-2">
-            <a href="login.html" class="btn btn-outline-primary btn-sm">Log in</a>
-            <a href="register.html" class="btn btn-primary btn-sm">Register</a>
-          </div>
-        </div>
-        <div class="mb-2">
-          <label class="form-label">Type</label>
-          <select class="form-select" id="typeInput">
-            <option value="pdf">PDF</option>
-            <option value="video">Video</option>
-            <option value="link">External Link</option>
-          </select>
-        <div class="mb-2">
-            <label class="form-label">Upload file (PDF/Video) or leave blank for External Link</label>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CampusLearn™ | Resources</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+
   <!-- App styles -->
-  <link rel="icon" href="assets/images/Favicon.png" />
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <meta name="color-scheme" content="light dark" />
+  <link rel="icon" href="../assets/images/Favicon.png" />
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body class="bg-light">
-  <!-- NAV (loaded after auth to satisfy 'no nav before login') -->
+  <!-- NAVBAR (loaded dynamically after auth) -->
   <div id="clNavMount"></div>
 
-  <!-- PAGE ROOT (hidden until session confirmed) -->
+  <!-- PAGE ROOT (hidden until authenticated) -->
   <main id="pageRoot" class="container my-4 d-none">
-    <!-- Header + Search -->
+    <!-- Header & Search -->
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center gap-3 mb-3">
       <h2 class="fw-semibold m-0">Learning Resources 📚</h2>
       <input type="text" id="searchInput" class="form-control w-100 w-md-50" placeholder="Search resources..." />
@@ -68,7 +30,7 @@
     <div class="d-flex flex-wrap gap-2 mb-3">
       <select id="moduleFilter" class="form-select w-auto">
         <option value="">All Modules</option>
-        <!-- Options loaded dynamically from table -->
+        <!-- Loaded dynamically -->
       </select>
       <select id="typeFilter" class="form-select w-auto">
         <option value="">All Types</option>
@@ -78,18 +40,18 @@
       </select>
     </div>
 
-    <!-- Student hint (shown if role === 'student') -->
+    <!-- Student hint -->
     <div id="tutorHint" class="alert alert-info d-none" role="alert">
       Want to upload? Apply to become a Tutor in your <a href="profile.html" class="alert-link">Profile</a>.
     </div>
 
-    <!-- Resource cards -->
+    <!-- Resources list -->
     <div id="resourceContainer" class="row g-3"></div>
 
     <!-- Pager -->
     <div id="pager" class="d-flex justify-content-center my-3"></div>
 
-    <!-- Upload (visible only to tutor/admin) -->
+    <!-- Upload section (only for tutor/admin) -->
     <section class="mt-5">
       <h5 class="mb-3">Upload a Resource (Tutors Only)</h5>
       <form id="uploadForm" class="border p-3 rounded bg-white shadow-sm">
@@ -109,7 +71,7 @@
           <div class="col-12 col-md-6">
             <label for="fileInput" class="form-label">Upload file (PDF/Video)</label>
             <input type="file" class="form-control" id="fileInput" accept=".pdf,video/*">
-            <div class="form-text">Leave empty if you’re adding an External Link.</div>
+            <div class="form-text">Leave empty if adding an external link.</div>
           </div>
           <div class="col-12">
             <label for="urlInput" class="form-label">External URL</label>
@@ -124,108 +86,6 @@
     </section>
   </main>
 
-    <!-- Main content -->
-    <main class="container my-4">
-      <h1 class="h4 mb-4">Learning Materials</h1>
-
-      <!-- Search & Filters -->
-      <form class="row g-3 mb-3">
-        <div class="col-md-4">
-          <label class="form-label">Search</label>
-          <input class="form-control" placeholder="e.g., normalization, UML">
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Module</label>
-          <select class="form-select">
-            <option>All</option><option>SE202</option><option>DB101</option><option>ITM300</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Type</label>
-          <select class="form-select">
-            <option>All</option><option>Video</option><option>PDF</option><option>Interactive</option>
-          </select>
-        </div>
-      </form>
-
-      <!-- 🔹 Upload Section -->
-      <section class="mb-5">
-        <div class="card border-0 shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title mb-3">Upload New Learning Material</h5>
-            <form id="uploadForm" class="row g-3">
-              <div class="col-md-4">
-                <label class="form-label">Module Code</label>
-                <input type="text" id="moduleCode" class="form-control" placeholder="e.g., DB101" required>
-              </div>
-              <div class="col-md-4">
-                <label class="form-label">Type</label>
-                <select id="fileType" class="form-select" required>
-                  <option value="">Select Type</option>
-                  <option value="pdf">PDF</option>
-                  <option value="video">Video</option>
-                  <option value="interactive">Interactive</option>
-                </select>
-              </div>
-              <div class="col-md-4">
-                <label class="form-label">Choose File</label>
-                <input type="file" id="fileInput" class="form-control" required>
-              </div>
-              <div class="col-md-12">
-                <button type="submit" class="btn btn-primary">
-                  <i class="fa fa-upload me-2"></i>Upload File
-                </button>
-                <div id="uploadStatus" class="small mt-2 text-muted"></div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-
-      <!-- Existing Resources -->
-      <div class="row g-3">
-        <div class="col-md-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h6>Normalization 101</h6>
-              <p class="small">DB101 • PDF</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h6>Sequence Diagrams Explained</h6>
-              <p class="small">SE202 • Video</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h6>Agile Estimation Exercise</h6>
-              <p class="small">SE202 • Interactive</p>
-              <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="mt-5 py-4 border-top">
-      <div class="container text-center text-muted small">
-        <div>© 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus</div>
-        <div class="mt-2">Prototype demo. Not connected to real services.</div>
-      </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/resources.js"></script>
-  </body>
   <!-- Toast container -->
   <div class="position-fixed bottom-0 end-0 p-3" style="z-index:1100">
     <div id="clToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
@@ -237,18 +97,21 @@
     </div>
   </div>
 
-  <!-- JS (order matters) -->
-  <script src="assets/js/env.js"></script> <!-- real keys (ignored in git); ensure env.example.js is committed -->
+  <!-- ✅ JavaScript (this is the section you were missing) -->
+  <script src="../assets/js/env.js"></script> <!-- Local keys (ignored in git); env.example.js committed -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    // Create client early for resources.js
-    window.supabase = supabase.createClient(window.__ENV.SUPABASE_URL, window.__ENV.SUPABASE_ANON_KEY);
+    // Create Supabase client early for resources.js
+    window.supabase = supabase.createClient(
+      window.__ENV.SUPABASE_URL,
+      window.__ENV.SUPABASE_ANON_KEY
+    );
   </script>
 
-  <!-- Bootstrap JS (for toasts) -->
+  <!-- Bootstrap Bundle (for toast + collapse) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Resources logic (final version you pasted earlier) -->
-  <script src="assets/js/resources.js" defer></script>
+  <!-- Your logic -->
+  <script src="../assets/js/resources.js" defer></script>
 </body>
 </html>
