--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/js/env.js"></script>
+    <script src="./env.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
     <script src="scripts/SupabaseClient.js"></script>
     <script src="scripts/Fetch_tutors_and_testimonials.js" defer></script>
