--- a/pages/forum.html
+++ b/pages/forum.html
@@ -8,7 +8,7 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
-    <link href="assets/css/styles.css" rel="stylesheet" />
+    <!-- <link href="assets/css/styles.css" rel="stylesheet" /> -->
      <script src = "../assets/js/nav.js"></script>
   </head>
 
@@ -161,10 +161,12 @@
       </div>
     </footer>
 
-    <!-- JS -->
+<!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/nav.js"></script>
     <script src="../env.js"></script>
-    <script type="module" src="../vendor/bootstrap/js/supabaseClient.js"></script>
-    <script type="module" src="../assets/js/ForumPost.js"></script>
+    <script src="../assets/js/supabaseClient.js" type="module"></script>
+    <script src="../assets/js/ForumPost.js" type="module"></script>
+
   </body>
 </html>
