added separate profile pages for tutors and students

--- a/pages/student-dashboard.html
+++ b/pages/student-dashboard.html
@@ -64,7 +64,7 @@
                 <p><strong>Name:</strong> Jane Doe</p>
                 <p><strong>Program:</strong> BIT Year 2</p>
                 <p><strong>Active Topics:</strong> 5 | <strong>Messages:</strong> 12 | <strong>Tutoring Sessions:</strong> 3</p>
-                <a href="profile.html" class="btn btn-outline-primary btn-sm">Edit Profile</a>
+                <a href="student-profile.html" class="btn btn-outline-primary btn-sm">Edit Profile</a>
               </div>
             </div>
           </section>
