Revert "added separate profile pages for tutors and students"
This reverts commit 2d216138fb2f06cf4e9f36cfe4f7df6dcf917b72.

--- a/pages/tutor-dashboard.html
+++ b/pages/tutor-dashboard.html
@@ -53,7 +53,7 @@
             <p><strong>Name:</strong> Tutor A</p>
             <p><strong>Expertise:</strong> Software Engineering, Databases</p>
             <p><strong>Stats:</strong> 10 Topics Assigned | 25 Students Helped | 4.8/5 Rating</p>
-            <a href="tutor-profile.html" class="btn btn-outline-primary btn-sm">Edit Profile</a>
+            <a href="profile.html" class="btn btn-outline-primary btn-sm">Edit Profile</a>
           </div>
         </div>
       </section>
