--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,23 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tutor Profile | CampusLearn</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/style.css" />
-  <style>
-    body {
-        background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        background-blend-mode: overlay;
-        background-size: auto, cover;
-        background-repeat: repeat, no-repeat;
-        background-color: #f5f7fa;
-      }</style>
+  <link rel="stylesheet" href="../assets/css/style.css" /> <!-- your site theme -->
+</head>
 <body>
   
   <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
+      <a class="navbar-brand fw-bold text-primary" href="tutor-dashboard.html">CampusLearn</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#ClNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -105,7 +95,7 @@
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="../tutor-profile.js"></script>
+<script src="../js/profile.js"></script>
 
 </body>
 </html>
