--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,6 +6,20 @@
   <title>Tutor Profile | CampusLearn</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../assets/css/style.css" /> <!-- your site theme -->
+  <link href="assets/css/styles.css" rel="stylesheet">
+  <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+  <style>
+    body {
+      background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      background-blend-mode: overlay;
+      background-size: auto, cover;
+      background-repeat: repeat, no-repeat;
+      background-color: #f5f7fa;
+    }
+  </style>
 </head>
 <body>
   
