--- a/pages/messages.html
+++ b/pages/messages.html
@@ -6,29 +6,54 @@
     <title>Messages • CampusLearn™</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-    <link href="assets/css/styles.css" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
-    <script src="../scripts/Ai.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="../env.js"></script>
+    <script src="../scripts/SupabaseClient.js"></script>
     <style>
       body {
-        background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
+        background: linear-gradient(135deg, #f0f4ff, #e6ecff);
         min-height: 100vh;
         display: flex;
         flex-direction: column;
-        background-blend-mode: overlay;
-        background-size: auto, cover;
-        background-repeat: repeat, no-repeat;
-        background-color: #f5f7fa;
+      }
+      .chat-list {
+        height: 500px;
+        overflow-y: auto;
+      }
+      .chat-window {
+        height: 500px;
+        overflow-y: auto;
+        background-color: #ffffff;
+        border-radius: 0.5rem;
+      }
+      .message-bubble {
+        padding: 0.6rem 1rem;
+        border-radius: 1rem;
+        max-width: 80%;
+        word-wrap: break-word;
+      }
+      .sent {
+        background-color: #0d6efd;
+        color: white;
+        align-self: flex-end;
+      }
+      .received {
+        background-color: #f1f3f5;
+        color: #333;
+        align-self: flex-start;
       }
     </style>
-     <script src = "../assets/js/nav.js"></script>
-     <script src="../assets/js/env.js"></script>
   </head>
+
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
+    <!-- 🌐 Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top shadow-sm">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="topics.html">CampusLearn<span class="text-primary">™</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand fw-bold" href="topics.html">
+          CampusLearn<span class="text-primary">™</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="clNav">
@@ -48,194 +73,93 @@
       </div>
     </nav>
 
+    <!-- 💬 Main Messaging Section -->
     <main class="container my-4">
-      <h1 class="h4 mb-4">Messages</h1>
-
-      <section id="clConversationFilters" class="mb-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Filter Conversations</h5>
-            <form class="row g-3">
-              <div class="col-md-4">
-                <select class="form-select">
-                  <option value="">All Contacts</option>
-                  <option value="tutor">Tutors</option>
-                  <option value="student">Students</option>
-                </select>
-              </div>
-              <div class="col-md-4">
-                <select class="form-select">
-                  <option value="">All Modules</option>
-                  <option value="SE202">SE202</option>
-                  <option value="DB101">DB101</option>
-                  <option value="ITM300">ITM300</option>
-                </select>
-              </div>
-              <div class="col-md-4">
-                <select class="form-select">
-                  <option value="">All Statuses</option>
-                  <option value="unread">Unread</option>
-                  <option value="archived">Archived</option>
-                </select>
-              </div>
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary w-100">Apply Filters</button>
-              </div>
-            </form>
+      <!-- Current User Display -->
+      <div class="row mb-3">
+        <div class="col-12">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Logged in as: <span id="currentUserDisplay"></span></h5>
+              <button id="logoutBtn" class="btn btn-outline-danger btn-sm">Logout</button>
+            </div>
           </div>
         </div>
-      </section>
-
-      <div class="row g-3">
+      </div>
+      <div class="row g-4">
+        <!-- Inbox -->
         <div class="col-md-4">
-          <div class="card h-100">
-            <div class="card-header">Conversations</div>
-            <div class="list-group list-group-flush">
-              <a class="list-group-item list-group-item-action active" href="#">Tutor A • SE202 <span class="badge text-bg-primary">2 unread</span></a>
-              <a class="list-group-item list-group-item-action" href="#">Tutor B • DB101</a>
-              <a class="list-group-item list-group-item-action" href="#">Student C • ITM300</a>
+          <div class="card shadow-sm">
+            <div class="card-header bg-white fw-semibold">Conversations</div>
+            <div class="list-group list-group-flush chat-list" id="conversationList">
+              <!-- Conversations will be loaded dynamically -->
+            </div>
+          </div>
+
+          <div class="card mt-3 shadow-sm">
+            <div class="card-header bg-white fw-semibold">Start New Conversation</div>
+            <div class="card-body">
+              <form id="newMessageForm">
+                <div class="mb-3">
+                  <label class="form-label">Recipient (Student ID or Email)</label>
+                  <input type="text" class="form-control" id="recipientInput" placeholder="e.g. ST12345 or name@email.com" required>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Module (optional)</label>
+                  <select class="form-select" id="moduleSelect">
+                    <option value="">Select module</option>
+                    <option value="General">General</option>
+                    <option value="SE202">SE202</option>
+                    <option value="DB101">DB101</option>
+                    <option value="ITM300">ITM300</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Message</label>
+                  <textarea class="form-control" id="messageText" rows="3" placeholder="Write your message…" required></textarea>
+                </div>
+                <button class="btn btn-primary w-100" type="submit">
+                  <i class="fa-solid fa-paper-plane me-2"></i>Send Message
+                </button>
+              </form>
             </div>
           </div>
         </div>
+
+        <!-- Chat Window -->
         <div class="col-md-8">
-          <div class="card h-100">
-            <div class="card-header d-flex justify-content-between align-items-center">
-              <span><strong>Tutor A</strong> • Private thread</span>
-              <div class="btn-group btn-group-sm">
-                <button class="btn btn-outline-secondary"><i class="fa-solid fa-file-pdf me-2"></i>Attach PDF</button>
-                <button class="btn btn-outline-secondary"><i class="fa-solid fa-link me-2"></i>Attach Link</button>
-              </div>
+          <div class="card shadow-sm h-100">
+            <div class="card-header bg-white d-flex justify-content-between align-items-center">
+              <span><strong id="chatPartnerName">Tutor A</strong> • Private Chat</span>
+              <button id="refreshBtn" class="btn btn-outline-secondary btn-sm">
+                <i class="fa-solid fa-rotate"></i> Refresh
+              </button>
             </div>
-            <div class="card-body" style="height: 380px; overflow:auto;">
-              <div class="mb-3"><span class="badge text-bg-light">Today 09:20</span></div>
-              <div class="d-flex flex-column gap-2">
-                <div class="p-2 bg-light rounded">Hello! How can I help with sequence diagrams?</div>
-                <div class="align-self-end p-2 bg-primary text-white rounded" style="max-width: 80%;">I’m struggling with activation bars vs lifelines.</div>
-                <div class="p-2 bg-light rounded">Activation bars show when an object is active, while lifelines represent the object’s existence. Want a diagram example?</div>
-                <div class="align-self-end p-2 bg-primary text-white rounded" style="max-width: 80%;">Yes, please!</div>
-              </div>
+            <div class="card-body d-flex flex-column chat-window" id="chatContainer">
+              <!-- Messages will be loaded dynamically -->
             </div>
-            <div class="card-footer">
-              <form class="d-flex gap-2" id="messageForm">
-                <input class="form-control" placeholder="Write a message…" id="messageInput">
-                <button class="btn btn-primary" type="button" onclick="sendMessage()">Send</button>
+            <div class="card-footer bg-light">
+              <form class="d-flex gap-2" id="sendMessageForm">
+                <input class="form-control" placeholder="Write a message…" id="chatInput">
+                <button class="btn btn-primary" type="button" id="sendButton">
+                  <i class="fa-solid fa-paper-plane"></i>
+                </button>
               </form>
             </div>
           </div>
         </div>
       </div>
-
-      <section id="clNewMessage" class="mt-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Start New Conversation</h5>
-            <form class="row g-3">
-              <div class="col-md-6">
-                <label class="form-label">Recipient</label>
-                <select class="form-select">
-                  <option value="">Select a recipient</option>
-                  <option value="tutor_a">Tutor A</option>
-                  <option value="tutor_b">Tutor B</option>
-                  <option value="student_c">Student C</option>
-                </select>
-              </div>
-              <div class="col-md-6">
-                <label class="form-label">Module</label>
-                <select class="form-select">
-                  <option value="">Select a module</option>
-                  <option value="SE202">SE202</option>
-                  <option value="DB101">DB101</option>
-                  <option value="ITM300">ITM300</option>
-                </select>
-              </div>
-              <div class="col-12">
-                <label class="form-label">Message</label>
-                <textarea class="form-control" rows="3" placeholder="Write your message…"></textarea>
-              </div>
-              <div class="col-12">
-                <button class="btn btn-primary" type="submit">Start Conversation</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-
-      <section id="clMessageArchive" class="mt-4">
-        <h2 class="h5 mb-3">Message Archive</h2>
-        <div class="list-group">
-          <a class="list-group-item list-group-item-action" href="#">Tutor C • ITM300 • Project Planning Discussion • 5 days ago</a>
-          <a class="list-group-item list-group-item-action" href="#">Student D • DB101 • SQL Query Help • 1 week ago</a>
-        </div>
-        <button class="btn btn-outline-secondary w-100 mt-3">Load More</button>
-      </section>
-
-      <section id="clMessageNotifications" class="mt-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Message Notification Settings</h5>
-            <form>
-              <div class="form-check mb-2">
-                <input class="form-check-input" type="checkbox" id="emailMessages" checked>
-                <label class="form-check-label" for="emailMessages">Receive email notifications for new messages</label>
-              </div>
-              <div class="form-check mb-2">
-                <input class="form-check-input" type="checkbox" id="inAppMessages" checked>
-                <label class="form-check-label" for="inAppMessages">Receive in-app notifications for new messages</label>
-              </div>
-              <button class="btn btn-primary btn-sm">Save Settings</button>
-            </form>
-          </div>
-        </div>
-      </section>
-
-      <section id="clPlatformMessages" class="mt-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Platform Announcements</h5>
-            <ul class="list-unstyled small">
-              <li><i class="fa-solid fa-bullhorn me-2"></i>New messaging feature added • Today 08:00 AM</li>
-              <li><i class="fa-solid fa-bullhorn me-2"></i>System maintenance scheduled • Yesterday</li>
-              <li><i class="fa-solid fa-bullhorn me-2"></i>Tutor applications open • 3 days ago</li>
-            </ul>
-          </div>
-        </div>
-      </section>
     </main>
 
-    <footer class="mt-5 py-4 border-top">
-      <div class="container text-center text-muted small">
-        <div>© 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus</div>
-        <div class="mt-2">Prototype demo. Not connected to real services.</div>
-      </div>
+    <!-- Footer -->
+    <footer class="mt-5 py-4 border-top text-center text-muted small">
+      © 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus
     </footer>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/app.js"></script>
-    <script>
-      // Initialize Supabase
-      import('./assets/js/supabaseClient.js').then(({ supabase }) => {
-        document.querySelector('a[href="../index.html"]').addEventListener('click', async (e) => {
-          e.preventDefault();
-          await supabase.auth.signOut();
-          window.location.href = '../index.html';
-        });
-      });
-    </script>
-    <script>
-      function sendMessage() {
-        const messageInput = document.getElementById('messageInput');
-        const message = messageInput.value.trim();
-        if (message) {
-          const messageContainer = document.querySelector('.card-body .d-flex.flex-column');
-          const newMessage = document.createElement('div');
-          newMessage.className = 'align-self-end p-2 bg-primary text-white rounded';
-          newMessage.style.maxWidth = '80%';
-          newMessage.textContent = message;
-          messageContainer.appendChild(newMessage);
-          messageInput.value = '';
-          messageContainer.scrollTop = messageContainer.scrollHeight;
-        }
-      }
-    </script>
+
+    <!-- Message Logic -->
+    <script src="../assets/js/Message.js"></script>
   </body>
 </html>
